# stylia

./: .gitignore  README.md  development.py  make_demo.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
notebooks/: demo.ipynb  stylia_tutorial.ipynb  test.ipynb
scripts/: make_demo.py
stylia/: __init__.py  _clean_version.py  _static_version.py  _version.py  config.py  vars.py
stylia/colors/: __init__.py  colors.py
stylia/figure/: __init__.py  figure.py
stylia/sizes/: __init__.py  sizes.py
stylia/utils/: __init__.py
