[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stylia"
dynamic = ["version"]
authors = [
    {name = "Miquel Duran-Frigola, Ersilia Open Source Initiative", email = "miquel@ersilia.io"},
]
description = "Helper functions used by Ersilia to produce presentable plots with MatPlotLib"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "seaborn>=0.12.2",
    "matplotlib>=3.7.1",
    "scikit-learn>=1.2.2",
    "cmcrameri>=1.7",
    "palettable>=3.3.2"
]

classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Data Visualization",
]
keywords = ["data_visualization"]

[project.urls]
"Source Code" = "https://github.com/ersilia-os/stylia/"

[tool.setuptools]
packages = {find = {exclude = ["utilities"]}}

[tool.setuptools.package-data]
"stylia" = ["example/files/*.csv"]

[tool.setuptools.dynamic]
version = {attr = "stylia._clean_version.__version__"}