[tool.poetry]
name = "stylia"
version = "0.0.2"
description = "Acceptable figure styles for scientific publications"
authors = ["Miquel Duran-Frigola <miquel@ersilia.io>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "stylia" }]
include = ["stylia/fonts/*"]

[tool.poetry.dependencies]
python = ">=3.8"
matplotlib = ">=3.7.1"
scikit-learn = ">=1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
